Temperature Converter done too

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -9,25 +9,25 @@
 <body>
     <header>
         <div class="profile-image">
-            <img src="profile.jpg" alt="My Profile Picture">
+            <img src="resources\images\picture.jpeg" alt="My Profile Picture">
         </div>
-        <h1>John Doe</h1>
+        <h1>Asad ur Rehman</h1>
     </header>
 
     <section id="contact">
         <h2>Contact Information</h2>
         <ul>
-            <li>Email: john@example.com</li>
-            <li>Phone: +1 123-456-7890</li>
-            <li>Website: www.johndoe.com</li>
-            <li>Location: New York, USA</li>
+            <li>Email: aurehman.bese21seecs@seecs.edu.pk</li>
+            <li>Phone: +923117080207</li>
+            <li>Website: https://asadur-rehman.github.io/OIBSIP/Landing%20Page/</li>
+            <li>Location: Islamabad, Pakistan</li>
         </ul>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>Project 1</h3>
+            <h3>Landing Page</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <a href="#" class="btn">View Project</a>
         </div>
@@ -41,11 +41,11 @@
 
     <section id="resume">
         <h2>Resume</h2>
-        <a href="resume.pdf" target="_blank" class="btn">Download Resume</a>
+        <a href="resources\Resume.pdf" target="_blank" class="btn">Download Resume</a>
     </section>
 
     <footer>
-        <p>&copy; 2023 John Doe. All rights reserved.</p>
+        <p>&copy; 2023 Asad ur Rehman. All rights reserved.</p>
     </footer>
 </body>
 </html>
