--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -28,15 +28,14 @@
         <h2>Projects</h2>
         <div class="project">
             <h3>Landing Page</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#" class="btn">View Project</a>
+            <p>A visually appealing landing page designed and coded from scratch using HTML and CSS.</p>
+            <a href="https://asadur-rehman.github.io/OIBSIP/Landing%20Page/" class="btn">View Project</a>
         </div>
         <div class="project">
-            <h3>Project 2</h3>
-            <p>Nullam malesuada odio nec nisi faucibus, ac rhoncus magna dapibus.</p>
-            <a href="#" class="btn">View Project</a>
+            <h3>Temperature Converter Website</h3>
+            <p>An interactive temperature converter website allowing users to convert temperatures between Celsius, Fahrenheit, and Kelvin.</p>
+            <a href="https://asadur-rehman.github.io/OIBSIP/Temperature%20Converter%20Website/" class="btn">View Project</a>
         </div>
-        <!-- Add more projects here -->
     </section>
 
     <section id="resume">
