--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -17,12 +17,17 @@
     <section id="contact">
         <h2>Contact Information</h2>
         <ul>
-            <li>Email: aurehman.bese21seecs@seecs.edu.pk</li>
-            <li>Phone: +923117080207</li>
-            <li>Website: https://asadur-rehman.github.io/OIBSIP/Landing%20Page/</li>
+            <li>Email: <a href="mailto:aur63639@gmail.com">aur63639@gmail.com</a></li>
+            <li>Phone: <a href="tel:+923117080207">+92 3117080207</a></li>
+            <li>
+                <span class="hidden-link">Website:</span>
+                <a href="https://asadur-rehman.github.io/OIBSIP/Landing%20Page/" target="_blank" class="background-link">Website</a>
+            </li>
             <li>Location: Islamabad, Pakistan</li>
         </ul>
     </section>
+    
+    
 
     <section id="projects">
         <h2>Projects</h2>
